# u8io

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  justfile
.github/workflows/: ci.yml
cmake/: u8io-config.cmake.in
include/u8io/: ascii.hpp  cast.hpp  charconv.hpp  config.hpp  error.hpp  format.hpp  hash.hpp  io.hpp  print.hpp  text.hpp  transcode.hpp  u8io.hpp
tests/: CMakeLists.txt  test_ascii.cpp  test_cast.cpp  test_charconv.cpp  test_error.cpp  test_format.cpp  test_hash.cpp  test_io.cpp  test_main.cpp  test_print.cpp  test_text.cpp  test_transcode.cpp  test_windows_headers.cpp  test_windows_headers_reverse.cpp  u8test.hpp
